2006-06-01  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tclbench/invoke.bench: Run invoke_1_to_10_loop
        the default number of iterations. Running only 100
        iterations produced very confusing results that
        did not match from one run to the next.
        * tests/tclbench/jacl1+tjc.out: Removed.
        * tests/tclbench/jacl1.out: Removed.
        * tests/tclbench/jacl132.out: Removed.
        * tests/tclbench/libbench.tcl: Require that test
        result converge twice before stopping. Also, generate
        average of last 3 times as the result time instead
        of picking the smallest time. This gives a better
        average results for multiple runs.
        * tests/tclbench/tclsh8411.out: Removed.

2006-05-31  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Interp.java (eval, evalResource):
        Check for exception and raise proper error message
        in case Jacl is run in an applet.

2006-05-30  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tcljava/tcl/lang/TclString.java:
        Reimplement TclString so that a dummy
        ref is set inside the TclObject. This
        dummy value is used for each TclObject
        that contains a TclString unless the
        TclString is appended to. This change
        avoids having to allocate thousands of
        unused TclString instances.

2006-05-29  Mo DeJong  <mdejong@users.sourceforge.net>

        Comment out debug statements. This generates
        less code in a compiled tjc.jar.

        * src/tjc/tjc/library/compileproc.tcl:
        * src/tjc/tjc/library/descend.tcl:
        * src/tjc/tjc/library/parse.tcl:

2006-05-29  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tclbench/compare.tcl: Add script that
        is used to process the output of tclbench
        and convert it to a CSV file that can easily
        be imported into a spreadsheet.

2006-05-27  Mo DeJong  <mdejong@users.sourceforge.net>
